syntax="proto3";

package matrix.derivatives.v1;

import "cosmos/orm/v1alpha1/orm.proto";

message Params {
  option (cosmos.orm.v1alpha1.singleton) = {
    id: 1,
  };

  // stopped identifies if the derivatives exchange is stopped or not
  bool stopped = 1;
}

// Position identifies a user position in a given pair.
message Position {
  option (cosmos.orm.v1alpha1.table) = {
    id: 2,
    primary_key: {
      fields: "address,pair"
    }
  };
  // address identifies the address owner of this position
  string address = 1;
  // pair identifies the pair associated with this position
  string pair = 2;


  string size = 3; // signed int
  string margin = 4; // int
  string open_notional = 5; // int
  string last_update_cumulative_premium_fraction = 6; // int
  int64 liquidity_history_index = 7;
  int64 block_number = 8;
}

message VirtualAMMInfo {
  option (cosmos.orm.v1alpha1.table) = {
    id: 3,
    primary_key: {
      fields: "pair"
    }
  };
  string pair = 1;
  int64 last_restriction_block = 2;
  repeated string cumulative_premium_fractions = 3;
}